kubernetes/apps/karakeep/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "karakeep.k8s.local"
  rules:
    - backendRefs:
        - name: karakeep
          port: 3000
